--- a/app/homepage.html
+++ b/app/homepage.html
@@ -300,7 +300,7 @@
 
 		<!-- =rubrics -->
 		<section class="rubrics">
-			<ul class="rubrics__tab flexbox">
+			<ul class="rubrics__nav flexbox">
 				<li><a href="#" title="" class="current" data-target="#tab-news">Новости</a></li>
 				<li class="separator">/</li>
 				<li><a href="#" title="" data-target="#tab-articles">Статьи</a></li>
@@ -310,38 +310,38 @@
 				<li><a href="#" title="" data-target="#tab-reviews">Отзывы</a></li>
 			</ul>
 			<div class="rubrics__body">
-				<div class="tab-current" id="tab-news">
+				<div class="tab tab-current" id="tab-news">
 					<div class="flexbox">
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
-								<time>2017-09-15</time>
-								<h3>Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
+								<time class="date">2017-09-15</time>
+								<h3 class="">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
-								<time>2017-09-15</time>
-								<h3>Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
+								<time class="date">2017-09-15</time>
+								<h3 class="">Metra - система кабельных каналов и мини-каналов</h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
-								<time>2017-09-15</time>
-								<h3>Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
+								<time class="date">2017-09-15</time>
+								<h3 class="">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
-								<time>2017-09-15</time>
-								<h3>Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
+								<time class="date">2017-09-15</time>
+								<h3>Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 					</div>
-					<div class="text-center rubrics__bottom">< <a href="#" title="" class="rubrics__link">перейти в раздел</a> ></div>
+					<div class="more text-center rubrics__bottom">< <a href="#" title="" class="rubrics__link">перейти в раздел</a> ></div>
 				</div>
 				<div class="tab" id="tab-articles"></div>
 				<div class="tab" id="tab-faq"></div>
@@ -358,12 +358,12 @@
 			</header>
 			<p>Электромонтажные работы в небольшой современном гараже частного дома, с кухней, комнатой отдыха и сан.узлом. Черновой монтаж производился не мной, мне лишь досталось "счастье" доделывать чистовой монтаж. Подрозетники яйцом или не в один уровень, провода коротыши торчащие из стен, потолка и подрозетников, облицовка в виде керамогранита, которая местами мешала нормальной установке розеток и выключателей.</p>
 
-			<div class="partners__items">
-				<div class="partners__item"><a href="#"><img src="images/partners/schneider.jpg" alt="schneider electric"></a></div>
-				<div class="partners__item"><a href="#"><img src="images/partners/abb.jpg" alt="abb"></a></div>
-				<div class="partners__item"><a href="#"><img src="images/partners/wago.jpg" alt="wago"></a></div>
-				<div class="partners__item"><a href="#"><img src="images/partners/legrand.jpg" alt="legrand"></a></div>
-				<div class="partners__item"><a href="#"><img src="images/partners/lezard.jpg" alt="lezard"></a></div>
+			<div class="partners__items flexbox">
+				<div class="partners__item"><a href="#" title=""><img src="images/partners/schneider.jpg" alt="schneider electric"></a></div>
+				<div class="partners__item"><a href="#" title=""><img src="images/partners/abb.jpg" alt="abb"></a></div>
+				<div class="partners__item"><a href="#" title=""><img src="images/partners/wago.jpg" alt="wago"></a></div>
+				<div class="partners__item"><a href="#" title=""><img src="images/partners/legrand.jpg" alt="legrand"></a></div>
+				<div class="partners__item"><a href="#" title=""><img src="images/partners/lezard.jpg" alt="lezard"></a></div>
 			</div>
 
 			<p>Электромонтажные работы в небольшой современном гараже частного дома, с кухней, комнатой отдыха и сан.узлом. Черновой монтаж производился не мной, мне лишь досталось "счастье" доделывать чистовой монтаж. Подрозетники яйцом или не в один уровень, провода коротыши торчащие из стен, потолка и подрозетников, облицовка в виде керамогранита, которая местами мешала нормальной установке розеток и выключателей.</p>
@@ -384,31 +384,30 @@
 	<!-- =feedback -->
 	<div class="feedback">
 		<div class="feedback__content text-center">
-			<p class="title">МЫ ВСЕГДА НА СВЯЗИ</p>
+			<p class="title">ОСТАЛИСЬ ВОПРОСЫ ?</p>
 			<div class="vcard">
-				<div class="name"><span class="category">Магазин</span> <span class="fn org">Cryocream</span></div>
+				<div class="name"><span class="category">Электрика</span> <span class="fn org">SchelkovoElectric</span></div>
 				<div class="adr">
-					 <span class="postal-code">191002</span>, <span class="country">Россия</span><span class="locality">Санкт-Петербург</span>, <span class="street-address">ул.Ломоносова, д.9</span>
+					 <span class="postal-code">114100</span>, <span class="country">Россия</span>, <span class="region">Московская область</span>, <span class="locality">г.Щелково</span>
 				</div>
-				<div><a href="tel:+74957840948" class="tel">+7 (495) 837-11-67</a> | <a href="mailto:info@cryocream.ru" class="email" title="">info@cryocream.ru</a></div>
+				<div><a href="tel:+74951471711" class="tel">+7 (495) 147-1711</a> | <a href="mailto:info@schelkovo-electric.com" class="email" title="">info@schelkovo-electric.com</a></div>
 			</div>
-			<p>Напишите Ваше сообщение, пожелание или что-нибудь доброе с нашей компании ))) Мы обязательно ответим как можно скорее</p>
 		</div>
 		<form action="#" method="post" id="feedback-form" class="feedback__form form-policy">
 			<fieldset>
 				<div class="row">
-					<input name="name" type="text" value="" class="form-control required" placeholder="как вас зовут" />
+					<input name="name" type="text" value="" class="form-control required" placeholder="как вас зовут? *" />
 					<input name="tel" type="tel" value="" class="form-control required" placeholder="ваш номер телефона *" />
 					<input name="email" type="email" value="" class="form-control required email" placeholder="ваш e-mail *" />
 				</div>
 				<div class="row">
-					<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения *" class="form-control required"></textarea>
+					<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Текст вашего сообщения" class="form-control"></textarea>
+					<input type="submit" name="feedback_submit" class="submit" value="отправить" />
 				</div>
 				<div class="qorder__form-row policy">
 					<input type="checkbox" id="checkbox2" value="" name="checkbox" checked="checked" class="user-access">
 					<label for="checkbox2">Я Согласен на обработку персональных данных и принимаю условия <a href="#.pdf" title="" target="_blank">Пользовательского соглашения</a></label>
 				</div>
-				<input type="submit" name="feedback_submit" class="submit" value="Отправить" />
 			</fieldset>
 		</form>
 	</div>
@@ -419,39 +418,62 @@
 <!-- =footer -->
 <footer>
 	<div class="footer__top">
-		<div class="footer__cities"></div>
-		<div class="footer__logo"></div>
-		<div class="footer__social"></div>
-	</div>
-	<div class="footer__bottom">
-		<div class="footer__navcopyright">
-			<ul class="nav" role="tablist">
-				<li><a href="#" title="">Главная</a></li>
-				<li><a href="#" title="">О нас</a></li>
-				<li><a href="#" title="">Услуги</a></li>
-				<li><a href="#" title="">Цены</a></li>
-				<li><a href="#" title="">Наши работы</a></li>
-				<li><a href="#" title="">Интересное</a></li>
-				<li><a href="#" title="">Контакты</a></li>
-			</ul>
-			<div class="copyright">
-				<div class="copyright__left">Copyright  © 2017</div>
-				<div class="copyright__right">
-					<a href="/" title="">Электромонтажные работы.</a>
-					Современно. Качественно. Надежно.
+		<div class="container">
+			<div class="flexbox">
+				<div class="footer__cities">
+					<p>Мы работаем в городах Подмосковья:</p>
+					<p><a href="#" title="Мытищи">Мытищи</a>, <a href="#" title="Королёв">Королёв</a>, <a href="#" title="Юбилейный">Юбилейный</a>, <a href="#" title="Пушкино">Пушкино</a>, <a href="#" title="Ивантеевка">Ивантеевка</a>, <a href="#" title="Фрязино">Фрязино</a>, <a href="#" title="Щелково">Щелково</a>, <a href="#" title="Балашиха">Балашиха</a>, <a href="#" title="Софрино">Софрино</a>, <a href="#" title="Красноармейск">Красноармейск</a>, <a href="#" title="Фряново">Фряново</a>, <a href="#" title="Хотьково">Хотьково</a>,  <a href="#" title="Сергивев Посад">СергиевПосад</a>, <a href="#" title="Пересвет">Пересвет</a>, <a href="#" title="Краснозаводск">Краснозаводск</a>, <a href="#" title="Серпухов">Серпухов</a>. </p>
+				</div>
+				<div class="footer__logo">
+					<a href="/" title=""><img src="/template/images/footerlogo.png" alt="" /></a>
+				</div>
+				<div class="footer__social">
+					<div class="footer__social-icons">
+						<a href="#" title="" target="_blank"><img src="/template/images/social/fb.gif" width="35" height="35" alt="Facebook"></a>
+						<a href="#" title="" target="_blank"><img src="/template/images/social/vk.gif" width="35" height="35" alt="Вконтакте"></a>
+						<a href="#" title="" target="_blank"><img src="/template/images/social/twitter.gif" width="35" height="35" alt="Twitter"></a>
+						<a href="#" title="" target="_blank"><img src="/template/images/social/odn.gif" width="35" height="35" alt="Одноклассники"></a>
+						<a href="#" title="" target="_blank"><img src="/template/images/social/inst.gif" width="35" height="35" alt="Instagram"></a>
+						<a href="#" title="" target="_blank"><img src="/template/images/social/googleplus.gif" width="35" height="35" alt="Google Plus"></a>
+						<a href="#" title="" target="_blank"><img src="/template/images/social/play.gif" width="35" height="35" alt=""></a>
+						<a href="#" title="" target="_blank"><img src="/template/images/social/smile.gif" width="35" height="35" alt=""></a>
+					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="footer__bottom">
+		<div class="container">
+			<div class="flexbox">
+				<div class="footer__navcopyright">
+					<ul class="nav" role="tablist">
+						<li><a href="#" title="">Главная</a></li>
+						<li><a href="#" title="">О нас</a></li>
+						<li><a href="#" title="">Услуги</a></li>
+						<li><a href="#" title="">Цены</a></li>
+						<li><a href="#" title="">Наши работы</a></li>
+						<li><a href="#" title="">Интересное</a></li>
+						<li><a href="#" title="">Контакты</a></li>
+					</ul>
+					<div class="copyright flexbox">
+						<div class="copyright__left">Copyright  © 2017</div>
+						<div class="copyright__right">
+							<a href="/" title="">Электромонтажные работы.</a> <br>
+							Современно. Качественно. Надежно.
+						</div>
+					</div>
+				</div>
 
-		<div class="contacts">
-			<a href="tel:+74951471711" class="contacts__tel">+7 (495) 147-1711</a>
-			<a href="#" title="" class="contacts__ring">Заказать звонок</a>
-		</div>
+				<div class="contacts contacts-footer">
+					<a href="tel:+74951471711" class="contacts__tel">+7 (495) 147-1711</a>
+					<a href="#" title="" class="contacts__ring">Заказать звонок</a>
+				</div>
 
-		<div class="kreotif">
-			Digital Agency Kreotif <br>
-			<a href="https://kreotif.com">создание сайтов</a> <br>
-			информация о сайте
+				<div class="kreotif">
+					Digital Agency Kreotif <br>
+					<a href="https://kreotif.com">создание сайтов <br> информация о сайте</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </footer>
