Сделан главный слайдер на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -12,10 +12,13 @@
 <meta name="robots" content="noindex,nofollow" />
 
 <title>Главная</title>
+<link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
 <script src="/template/js/libs.min.js"></script>
+<script src="/template/js/jquery.bxslider.min.js"></script>
 
-<!--[if !IE]><!-->
+
+<!--[if !IE]><<!--></!-->
 <script>if(/*@cc_on!@*/false){document.documentElement.className+=' ie10';}</script>
 <!--<![endif]-->
 
@@ -84,8 +87,29 @@
 
 
 	<!-- =slider -->
-	<div class="slider owl-carousel" id="foo1">
-
+	<div class="slider">
+		<div id="foo1">
+			<div class="slider__item">
+				<img src="images/slide-1.jpg" alt="">
+				<div class="slider__text">Все виды электромонтажных работ! Гарантия.</div>
+			</div>
+			<div class="slider__item">
+				<img src="images/slide-2.jpg" alt="">
+				<div class="slider__text">Все виды электромонтажных работ! Гарантия.</div>
+			</div>
+			<div class="slider__item">
+				<img src="images/slide-3.jpg" alt="">
+				<div class="slider__text">Все виды электромонтажных работ! Гарантия.</div>
+			</div>
+			<div class="slider__item">
+				<img src="images/slide-4.jpg" alt="">
+				<div class="slider__text">Все виды электромонтажных работ! Гарантия.</div>
+			</div>
+			<div class="slider__item">
+				<img src="images/slide-5.jpg" alt="">
+				<div class="slider__text">Все виды электромонтажных работ! Гарантия.</div>
+			</div>
+		</div>
 	</div>
 	<!-- =/slider -->
 
