Добавлен слайдер для услуг на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -245,7 +245,20 @@
 							</div>
 						</a>
 					</div>
-
+					<div class="services__item">
+						<a href="#" title="">
+							<div class="services__pic">
+								<img src="images/services/service-1.jpg" alt="" />
+							</div>
+							<div class="services__textbox">
+								<div class="flexbox">
+									<h3 class="services__title">Электромонтажные работы</h3>
+									<hr/>
+									<p class="services__shorttext">Осущетвляем электромонтажные работы любой сложности для физических и юридических лиц.</p>
+								</div>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 			<!-- =/carousel -->
