добавлены табы рубрик на главной

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -352,37 +352,121 @@
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
 								<time class="date">2017-09-15</time>
-								<h3 class="">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
+								<h3 class="rubrics__news-title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
 								<time class="date">2017-09-15</time>
-								<h3 class="">Metra - система кабельных каналов и мини-каналов</h3>
+								<h3 class="rubrics__news-title">Metra - система кабельных каналов и мини-каналов</h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
 								<time class="date">2017-09-15</time>
-								<h3 class="">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
+								<h3 class="rubrics__news-title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 						<div class="rubrics__news">
 							<div class="rubrics__news-item">
 								<time class="date">2017-09-15</time>
-								<h3>Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
+								<h3 class="rubrics__news-title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
 								<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 							</div>
 						</div>
 					</div>
 					<div class="more text-center rubrics__bottom">< <a href="#" title="" class="rubrics__link">перейти в раздел</a> ></div>
 				</div>
-				<div class="tab" id="tab-articles"></div>
-				<div class="tab" id="tab-faq"></div>
-				<div class="tab" id="tab-reviews"></div>
+				<div class="tab" id="tab-articles">
+					<div class="flexbox">
+						<div class="rubrics__article">
+							<a href="#" title="" class="rubrics__article-link">
+								<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
+								<p class="rubrics__article-title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</p>
+							</a>
+						</div>
+						<div class="rubrics__article">
+							<a href="#" title="" class="rubrics__article-link">
+								<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
+								<p class="rubrics__article-title">Как правильно штробить стену</p>
+							</a>
+						</div>
+						<div class="rubrics__article">
+							<a href="#" title="" class="rubrics__article-link">
+								<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
+								<p class="rubrics__article-title">как наростить проводку</p>
+							</a>
+						</div>
+						<div class="rubrics__article">
+							<a href="#" title="" class="rubrics__article-link">
+								<div class="rubrics__article-pic"><img src="images/article-1.jpg" alt=""></div>
+								<p class="rubrics__article-title">прокладка проводки по полу</p>
+							</a>
+						</div>
+					</div>
+					<div class="more text-center rubrics__bottom">< <a href="#" title="" class="rubrics__link">перейти в раздел</a> ></div>
+				</div>
+				<div class="tab" id="tab-faq">
+					<div class="flexbox">
+						<div class="rubrics__faq">
+							<div class="rubrics__faq-item">
+								<h3 class="rubrics__faq-title">Что лучше внутренняя или внешняя проводка?</h3>
+								<p><a href="#" title="">И тот и другой вид проводки имеет свои преимущества, однако в большинстве случаев выбирать не приходится. В многоэтажных домах из кирпича или ...</a></p>
+							</div>
+						</div>
+						<div class="rubrics__faq">
+							<div class="rubrics__faq-item">
+								<h3 class="rubrics__faq-title">Какой провод лучше медный или алюминиевый?</h3>
+								<p><a href="#" title="">Так как алюминий весит намного меньше меди, его больше применяют при прокладке линий электропередач, что позволяет уменьшить ...</a></p>
+							</div>
+						</div>
+						<div class="rubrics__faq">
+							<div class="rubrics__faq-item">
+								<h3 class="rubrics__faq-title">Можно ли соединять медь с алюминием?</h3>
+								<p><a href="#" title="">В квартирах домов старой постройки зачастую электропроводка выполнена из алюминиевых проводов, соединенных между собой методом скрутки ...</a></p>
+							</div>
+						</div>
+						<div class="rubrics__faq">
+							<div class="rubrics__faq-item">
+								<h3 class="rubrics__faq-title">Крепление провода в штробе - как закрепляют провод и нужно ли это вообще?</h3>
+								<p><a href="#" title="">Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их ...</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="more text-center rubrics__bottom">< <a href="#" title="" class="rubrics__link">перейти в раздел</a> ></div>
+				</div>
+				<div class="tab" id="tab-reviews">
+					<div class="flexbox">
+						<div class="rubrics__reviews">
+							<div class="rubrics__reviews-item">
+								<h3 class="rubrics__reviews-title">Анна, Щелково</h3>
+								<p><a href="#" title="">Хочу поделиться отзывом о работе электрика Алексея: Огромное спасибо Александру за открытость, профессионализм, неравнодушие и комфорт в общении! Приехал быстро, сделал аккуратно, ...</a></p>
+							</div>
+						</div>
+						<div class="rubrics__reviews">
+							<div class="rubrics__reviews-item">
+								<h3 class="rubrics__reviews-title">Ирина, поселок Лесной</h3>
+								<p><a href="#" title="">Выражаю благодарность специалистам компании за электромонтажные работы в квартире. Все сделано очень профессионально, качественно, аккуратно, в оговоренные сроки и по приемлемой цене. ...</a></p>
+							</div>
+						</div>
+						<div class="rubrics__reviews">
+							<div class="rubrics__reviews-item">
+								<h3 class="rubrics__reviews-title">Владимир, Щелково</h3>
+								<p><a href="#" title="">Высокопрофессиональное, качественное, вежливое обслуживание!!! Спасибо Алексею! Ни к кому больше обращаться не будем! Просто удача найти таких специалистов! ...</a></p>
+							</div>
+						</div>
+						<div class="rubrics__reviews">
+							<div class="rubrics__reviews-item">
+								<h3 class="rubrics__reviews-title">Ирина, Фрязино</h3>
+								<p><a href="#" title="">Мы с мужем в воскресенье купили люстру, и нам очень хотелось ее повесить. Муж стал подключать ее и обломил провод в потолке, причем обломил под самый корешок. Очень расстроились, так как ...</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="more text-center rubrics__bottom">< <a href="#" title="" class="rubrics__link">перейти в раздел</a> ></div>
+				</div>
 			</div>
 		</section>
 		<!-- =/rubrics -->
@@ -484,7 +568,7 @@
 			<div class="flexbox">
 				<div class="footer__navcopyright">
 					<ul class="nav" role="tablist">
-						<li><a href="#" title="">Главная</a></li>
+						<li class="active"><a href="#" title="">Главная</a></li>
 						<li><a href="#" title="">О нас</a></li>
 						<li><a href="#" title="">Услуги</a></li>
 						<li><a href="#" title="">Цены</a></li>
